# h5-tournaments-v2

./: .gitignore  Cargo.toml  Dockerfile
bot/: Cargo.toml
bot/src/: error.rs  main.rs
desktop/: package-lock.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
proto/: Auth.proto  Common.proto  GameReportsService.proto  HeroType.proto
service/: Cargo.toml
service/.cargo/: config.toml
service/migrations/migration/: Cargo.toml
service/src/: auth.rs  db.rs  error.rs  main.rs
service/src/models/: mod.rs  operator.rs  user.rs
shared/: Cargo.toml  build.rs
shared-gen/: Cargo.toml
shared-gen/src/: auth.rs  common.rs  hero_type_enum.rs  lib.rs
shared/src/: error.rs  lib.rs  prelude.rs
