[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
#migration = { path = "migrations/migration"}
shared = { path = "../shared" }
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
sea-orm = { version =  "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio"] }
thiserror = "2.0.18"
dotenv = "0.15.0"
chrono = { version =  "0.4.44", features = ["serde"] }