[package]
edition      = "2024"
name         = "migration"
publish      = true
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.51.1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
]
version = "2.0.0-rc.37"
